readPropertyTypeCharacteristic returns a Boolean instead of a Integer
git-svn-id: https://svn.alma.cl/p2/trunk/ACS@211085 523d945c-050c-4681-91ec-863ad3bb968a